opam-version: "2.0"
version: "2.3+satysfi0.0.5"
synopsis: "Document: SATySFi Font Package for Bodoni*"
description: """
Document: SATySFi Font Package for Bodoni*

This package installs fonts from https://github.com/indestructible-type/Bodoni
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "GFDL-1.1-or-later"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-bodoni-star"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-bodoni-star/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-bodoni-star.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-fonts-bodoni-star" {= "%{version}%"}

  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fonts-bodoni-star-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-bodoni-star-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
