opam-version: "2.0"
version: "2.3+satysfi0.0.5"
synopsis: "SATySFi Font Package for Bodoni*"
description: """
SATySFi Font Package for Bodoni*

This package installs fonts from https://github.com/indestructible-type/Bodoni
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "OFL-1.1"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-bodoni-star"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-bodoni-star/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-bodoni-star.git"
extra-source "Bodoni-master.zip" {
  archive: "https://github.com/indestructible-type/Bodoni/releases/download/2.3/Bodoni-master.zip"
  checksum: [
    "sha256=787426889302f357b1e108fd5284fbe9d40063cb0c994d936c7b6a99816f8ccc"
    "sha512=6e669d9daf2aea3fbc9e0df3c7440ae6e5968d630b4849afca718bab65ab79bcbe5041a8393c534802b4b211d9d4e59f2e70b65aa7c194fcda81b65a2a48d77d"
  ]
}
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [
  ["unzip" "-o" "Bodoni-master.zip"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-bodoni-star"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
